--- a/index.html
+++ b/index.html
@@ -1,1 +1,111 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<style>
+.content {
+  max-width: 530px;
+  margin: auto;
+}
+h1 {text-align: center;}
+
+</style>
+
+<div class="content">
+<head>
+<title>Jonas Kastberg Hinrichsen</title>
+</head>
+<body>
+
+  <h1>
+    Jonas Kastberg Hinrichsen
+  </h1>
+  <table border="0" cellspacing="0" style="width:100%">
+  <tbody><tr>
+    <td>Ph.D. Student</td>
+    <td width="25">&nbsp;</td>
+    <td align="right">
+      <a href="cv.pdf">	CV </a>
+    </td>
+  </tr>
+  <tr>
+    <td> Affiliation: </td>
+    <td width="25">&nbsp;</td>
+    <td align="right">
+      <a href="https://en.itu.dk/research/departments/computer-science-department">
+	Dept. of Comp. Science, IT University of Copenhagen</a>
+    </td>
+  </tr>
+  </tbody></table>
+
+<p>
+<strong>Short Biography</strong>
+</p>
+
+<div>
+<img src="me.jpg" alt="me" style="width:250px;height:250px;" align="right" hspace="45" vspace="15">
+<p>
+I am a recently graduated Ph.D. at the IT University of Copenhagen,
+where I also did my bachelor and masters degrees in software development.
+Coming from an applied background, my interests for theoretical computer science
+is rooted in bridging the gap between industry and academia.
+My main contribution thus far, the Actris logical framework, is then,
+in part, a venture about defining intuitive yet expressive specifications and
+proofs for complicated
+message-passing programs, parsable by those who are less theoretically interested.
+</p>
+</div>
+
+<h2>Ph.D. Dissertation</h2>
+
+<p>Sessions and Separation <a href="./papers/thesis.pdf">[pdf]</a></p>
+
+<h2>Publications</h2>
+
+<p>Machine-Checked Semantic Session Typing, CPP 2021 [Distinguished] <a href="./papers/semantic_session_typing_cpp.pdf">[pdf]</a></p>
+<p>Actris: Session-Type Based reasoning in Separation Logic, POPL 2020 <a href="./papers/actris_popl.pdf">[pdf]</a></p>
+
+<h2>Manuscripts</h2>
+<p>Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic <a href="./papers/actris_lmcs.pdf">[pdf]</a></p>
+
+<h2>Talks</h2>
+<p>11. June, 2021, Ph.D. Defense [<a href="./talks/21-06-11_defense.pdf">Slides</a>]</p>
+<p>18. January, 2021, CPP (long vesion) [<a href="./talks/21-01-18_cpp_long.pdf">Slides</a>]</p>
+<p>18. January, 2021, CPP (short vesion) [<a href="./talks/21-01-18_cpp_short.pdf">Slides</a>]</p>
+<p>30. November, 2020, Aarhus University [<a href="./talks/20-11-30_aarhus.pdf">Slides</a>]</p>
+<p>18. November, 2020, Radboud University [<a href="./talks/20-11-18_radboud.pdf">Slides</a>]</p>
+<p>20. October, 2020, IT University of Copenhagen [<a href="./talks/20-10-20_itu.pdf">Slides</a>]</p>
+<p>04. June, 2020, VEST workshop [<a href="./talks/20-06-04_vest.pdf">Slides</a>]</p>
+<p>27. May, 2020, Delft University of Technology [<a href="./talks/20-05-27_delft.pdf">Slides</a>]</p>
+<p>22. January, 2020, POPL [<a href="./talks/20-01-22_popl.pdf">Slides</a>]</p>
+<p>28. October, 2019, Iris Workshop [<a href="./talks/19-10-28_iris_workshop.pdf">Slides</a>]</p>
+<p>02. October, 2019, Harvard University [<a href="./talks/19-10-02_harvard.pdf">Slides</a>]</p>
+
+<h2>Other</h2>
+  <p>POPL Artifact Evaluation Commitee 2022 member </p>
+  <p>POPL 2022 assistant reviewer </p>
+  <p>ICFP Artifact Evaluation Commitee 2020 Member </p>
+
+<h2> Contact </h2>
+<table border="0" cellspacing="0" style="width:100%">
+  <tbody>
+    <tr>
+      <td>E-mail:</td>
+      <td align="right"><a href="mailto:jkas@itu.dk">jkas@itu.dk</a></td>
+    </tr>
+    <tr>
+      <td>Phone:</td>
+      <td align="right">+45 60 24 99 24 </td>
+    </tr>
+    <tr>
+      <td>Office:</td>
+      <td align="right">Rued Langaards Vej 7, 4C07</td>
+      <tr>
+      <td colspan="3" align="right">DK-2300 Copenhagen, Denmark</td>
+      </tr>
+    </tr>
+</table>    
+
+</body>
+</div>
+
+</html>
