--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <style>
 .content {
-  max-width: 530px;
+  max-width: 560px;
   margin: auto;
 }
 h1 {text-align: center;}
@@ -21,7 +21,7 @@ h1 {text-align: center;}
   </h1>
   <table border="0" cellspacing="0" style="width:100%">
   <tbody><tr>
-    <td>Ph.D. Student</td>
+    <td>Postdoc</td>
     <td width="25">&nbsp;</td>
     <td align="right">
       <a href="cv.pdf">	CV </a>
@@ -32,7 +32,7 @@ h1 {text-align: center;}
     <td width="25">&nbsp;</td>
     <td align="right">
       <a href="https://en.itu.dk/research/departments/computer-science-department">
-	Dept. of Comp. Science, IT University of Copenhagen</a>
+	Logics and Semantics, Aarhus University, Denmark</a>
     </td>
   </tr>
   </tbody></table>
@@ -44,14 +44,13 @@ h1 {text-align: center;}
 <div>
 <img src="me.jpg" alt="me" style="width:250px;height:250px;" align="right" hspace="45" vspace="15">
 <p>
-I am a recently graduated Ph.D. at the IT University of Copenhagen,
-where I also did my bachelor and masters degrees in software development.
-Coming from an applied background, my interests for theoretical computer science
-is rooted in bridging the gap between industry and academia.
-My main contribution thus far, the Actris logical framework, is then,
-in part, a venture about defining intuitive yet expressive specifications and
-proofs for complicated
-message-passing programs, parsable by those who are less theoretically interested.
+  I am a postdoc at the Aarhus University in Denmark.
+  I come from an applied background, and so my interests for theoretical computer
+  science are rooted in bridging the gap between industry and academia.
+  My main contribution thus far, the Actris logical framework, is then,
+  in part, a venture about defining intuitive yet expressive specifications and
+  proofs for complicated message-passing programs, parsable by those who are
+  less theoretically interested.
 </p>
 </div>
 
