--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@ h1 {text-align: center;}
     <td>Postdoc</td>
     <td width="25">&nbsp;</td>
     <td align="right">
-      <a href="cv.pdf">	CV </a>
+      <!-- <a href="cv.pdf">	CV </a> -->
     </td>
   </tr>
   <tr>
     <td> Affiliation: </td>
     <td width="25">&nbsp;</td>
     <td align="right">
-      <a href="https://en.itu.dk/research/departments/computer-science-department">
+      <a href="https://cs.au.dk/research/logic-and-semantics">
 	Logics and Semantics, Aarhus University, Denmark</a>
     </td>
   </tr>
@@ -82,14 +82,14 @@ h1 {text-align: center;}
 <h2>Other</h2>
   <p>POPL Artifact Evaluation Commitee 2022 member </p>
   <p>POPL 2022 assistant reviewer </p>
-  <p>ICFP Artifact Evaluation Commitee 2020 Member </p>
+  <p>ICFP Artifact Evaluation Commitee 2020 member </p>
 
 <h2> Contact </h2>
 <table border="0" cellspacing="0" style="width:100%">
   <tbody>
     <tr>
       <td>E-mail:</td>
-      <td align="right"><a href="mailto:jkas@itu.dk">jkas@itu.dk</a></td>
+      <td align="right"><a href="mailto:hinrichsen@cs.au.dk">hinrichsen@cs.au.dk</a></td>
     </tr>
     <tr>
       <td>Phone:</td>
@@ -97,9 +97,9 @@ h1 {text-align: center;}
     </tr>
     <tr>
       <td>Office:</td>
-      <td align="right">Rued Langaards Vej 7, 4C07</td>
+      <td align="right">Åbogade 34</td>
       <tr>
-      <td colspan="3" align="right">DK-2300 Copenhagen, Denmark</td>
+      <td colspan="3" align="right">8200 Aarhus N, DK-Denmark</td>
       </tr>
     </tr>
 </table>    
