Updated layout and details

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <style>
 .content {
-  max-width: 560px;
+  max-width: 760px;
   margin: auto;
 }
 h1 {text-align: center;}
@@ -44,7 +44,7 @@ h1 {text-align: center;}
 <div>
 <img src="me.jpg" alt="me" style="width:250px;height:250px;" align="right" hspace="45" vspace="15">
 <p>
-  I am a postdoc at the Aarhus University in Denmark.
+  I am a postdoc at Aarhus University in Denmark.
   I come from an applied background, and so my interests for theoretical computer
   science are rooted in bridging the gap between industry and academia.
   My main contribution thus far, the Actris logical framework, is then,
@@ -67,23 +67,33 @@ h1 {text-align: center;}
 <p>Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic <a href="./papers/actris_lmcs.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
-<p>22. November, 2021, Aarhus University [<a href="./talks/21-11-22_aarhus.pdf">Slides</a>]</p>
+<p>22. November, 2021, Aarhus University, Seminar [<a href="./talks/21-11-22_aarhus.pdf">Slides</a>]</p>
 <p>11. June, 2021, Ph.D. Defense [<a href="./talks/21-06-11_defense.pdf">Slides</a>]</p>
-<p>18. January, 2021, CPP (long vesion) [<a href="./talks/21-01-18_cpp_long.pdf">Slides</a>]</p>
-<p>18. January, 2021, CPP (short vesion) [<a href="./talks/21-01-18_cpp_short.pdf">Slides</a>]</p>
-<p>30. November, 2020, Aarhus University [<a href="./talks/20-11-30_aarhus.pdf">Slides</a>]</p>
-<p>18. November, 2020, Radboud University [<a href="./talks/20-11-18_radboud.pdf">Slides</a>]</p>
-<p>20. October, 2020, IT University of Copenhagen [<a href="./talks/20-10-20_itu.pdf">Slides</a>]</p>
+<p>18. January, 2021, CPP Conference (long vesion) [<a href="./talks/21-01-18_cpp_long.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=z0ggx3SuGYc">Recording</a>]</p>
+<p>18. January, 2021, CPP Conference (short vesion) [<a href="./talks/21-01-18_cpp_short.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=bvm9v5Whv6c">Recording</a>]</p>
+<p>30. November, 2020, Aarhus University, Seminar [<a href="./talks/20-11-30_aarhus.pdf">Slides</a>]</p>
+<p>18. November, 2020, Radboud University, Seminar [<a href="./talks/20-11-18_radboud.pdf">Slides</a>]</p>
+<p>20. October, 2020, IT University of Copenhagen, Seminar [<a href="./talks/20-10-20_itu.pdf">Slides</a>]</p>
 <p>04. June, 2020, VEST workshop [<a href="./talks/20-06-04_vest.pdf">Slides</a>]</p>
-<p>27. May, 2020, Delft University of Technology [<a href="./talks/20-05-27_delft.pdf">Slides</a>]</p>
-<p>22. January, 2020, POPL [<a href="./talks/20-01-22_popl.pdf">Slides</a>]</p>
+<p>27. May, 2020, Delft University of Technology, Seminar [<a href="./talks/20-05-27_delft.pdf">Slides</a>]</p>
+<p>22. January, 2020, POPL Conference [<a href="./talks/20-01-22_popl.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=BDnbxBmwNyQ">Recording</a>]</p>
 <p>28. October, 2019, Iris Workshop [<a href="./talks/19-10-28_iris_workshop.pdf">Slides</a>]</p>
-<p>02. October, 2019, Harvard University [<a href="./talks/19-10-02_harvard.pdf">Slides</a>]</p>
+<p>02. October, 2019, Harvard University, Seminar [<a href="./talks/19-10-02_harvard.pdf">Slides</a>]</p>
 
-<h2>Other</h2>
+<h2>Academic Activities</h2>
   <p>POPL Artifact Evaluation Commitee 2022 member </p>
-  <p>POPL 2022 assistant reviewer </p>
+  <p>POPL Research Article Commitee 2022 assistant reviewer </p>
   <p>ICFP Artifact Evaluation Commitee 2020 member </p>
+
+<h2>Teaching Activities</h2>
+  <p>Course Instructor - Program Logics, Aarhus University, Autumn 2021</p>
+  <p>Course Instructor - Advanced Programming, IT University of Copenhagen, Autumn 2018</p>
+  <p>Course Instructor - Programming Language Concepts and Implementation, IT University of Copenhagen, Spring 2018</p>
+  <p>Teaching Assistant - Intelligent Systems Programming, IT University of Copenhagen, Spring 2016</p>
+  <p>Teaching Assistant - Operative Systems and C, IT University of Copenhagen, Autumn 2015</p>
+
+<h2>Other Activities</h2>
+  <p>Formal Methods Developer at Bedrock Systems, Inc., Autumn 2019</p>
 
 <h2> Contact </h2>
 <table border="0" cellspacing="0" style="width:100%">
