--- a/index.html
+++ b/index.html
@@ -54,23 +54,22 @@ h1 {text-align: center;}
 </p>
 </div>
 
-<h2>Ph.D. Dissertation</h2>
+<h2>PhD Dissertation</h2>
 
 <p>Sessions and Separation <a href="./papers/thesis.pdf">[pdf]</a></p>
 
 <h2>Publications</h2>
 
+<p>Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic, LMCS <a href="./papers/actris_lmcs.pdf">[pdf]</a></p>
 <p>Machine-Checked Semantic Session Typing, CPP 2021 [Distinguished] <a href="./papers/semantic_session_typing_cpp.pdf">[pdf]</a></p>
 <p>Actris: Session-Type Based reasoning in Separation Logic, POPL 2020 <a href="./papers/actris_popl.pdf">[pdf]</a></p>
 
-<h2>Manuscripts</h2>
-<p>Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic <a href="./papers/actris_lmcs.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
 <p>22. November, 2021, Aarhus University, Seminar [<a href="./talks/21-11-22_aarhus.pdf">Slides</a>]</p>
 <p>11. June, 2021, Ph.D. Defense [<a href="./talks/21-06-11_defense.pdf">Slides</a>]</p>
-<p>18. January, 2021, CPP Conference (long vesion) [<a href="./talks/21-01-18_cpp_long.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=z0ggx3SuGYc">Recording</a>]</p>
-<p>18. January, 2021, CPP Conference (short vesion) [<a href="./talks/21-01-18_cpp_short.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=bvm9v5Whv6c">Recording</a>]</p>
+<p>18. January, 2021, CPP Conference (long version) [<a href="./talks/21-01-18_cpp_long.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=z0ggx3SuGYc">Recording</a>]</p>
+<p>18. January, 2021, CPP Conference (short version) [<a href="./talks/21-01-18_cpp_short.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=bvm9v5Whv6c">Recording</a>]</p>
 <p>30. November, 2020, Aarhus University, Seminar [<a href="./talks/20-11-30_aarhus.pdf">Slides</a>]</p>
 <p>18. November, 2020, Radboud University, Seminar [<a href="./talks/20-11-18_radboud.pdf">Slides</a>]</p>
 <p>20. October, 2020, IT University of Copenhagen, Seminar [<a href="./talks/20-10-20_itu.pdf">Slides</a>]</p>
@@ -86,14 +85,14 @@ h1 {text-align: center;}
   <p>ICFP Artifact Evaluation Commitee 2020 member </p>
 
 <h2>Teaching Activities</h2>
-  <p>Course Instructor - Program Logics, Aarhus University, Autumn 2021</p>
-  <p>Course Instructor - Advanced Programming, IT University of Copenhagen, Autumn 2018</p>
+  <p>Course Instructor - Program Logics, Aarhus University, Fall 2021</p>
+  <p>Course Instructor - Advanced Programming, IT University of Copenhagen, Fall 2018</p>
   <p>Course Instructor - Programming Language Concepts and Implementation, IT University of Copenhagen, Spring 2018</p>
   <p>Teaching Assistant - Intelligent Systems Programming, IT University of Copenhagen, Spring 2016</p>
-  <p>Teaching Assistant - Operative Systems and C, IT University of Copenhagen, Autumn 2015</p>
+  <p>Teaching Assistant - Operative Systems and C, IT University of Copenhagen, Fall 2015</p>
 
 <h2>Other Activities</h2>
-  <p>Formal Methods Developer at Bedrock Systems, Inc., Autumn 2019</p>
+  <p>Formal Methods Developer at Bedrock Systems, Inc., Fall 2019</p>
 
 <h2> Contact </h2>
 <table border="0" cellspacing="0" style="width:100%">
