--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ h1 {text-align: center;}
 <p>28. October, 2019, Iris Workshop [<a href="./talks/19-10-28_iris_workshop.pdf">Slides</a>]</p>
 <p>02. October, 2019, Harvard University, Seminar [<a href="./talks/19-10-02_harvard.pdf">Slides</a>]</p>
 
-<h2>Academic Activities</h2>
+<h2>Conference Board and Commitee Participation</h2>
   <p>PLDI Artifact Evaluation Committee 2022 member</p>
   <p>PLACES Research Article Evaluation Committee 2022 member</p>
   <p>POPL Artifact Evaluation Commitee 2022 member </p>
