--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@ h1 {text-align: center;}
 <p>02. October, 2019, Harvard University, Seminar [<a href="./talks/19-10-02_harvard.pdf">Slides</a>]</p>
 
 <h2>Conference Board and Commitee Participation</h2>
-  <p>PLDI Artifact Evaluation Committee 2022 member</p>
-  <p>PLACES Research Article Evaluation Committee 2022 member</p>
-  <p>POPL Artifact Evaluation Commitee 2022 member </p>
-  <p>POPL Research Article Commitee 2022 assistant reviewer </p>
-  <p>ICFP Artifact Evaluation Commitee 2020 member </p>
+  <p>OOPSLA Research Article Evaluation Committee 2022 (Assistant)</p>
+  <p>PLACES Research Article Evaluation Committee 2022</p>
+  <p>PLDI Artifact Evaluation Committee 2022</p>
+  <p>POPL Artifact Evaluation Commitee 2022</p>
+  <p>POPL Research Article Commitee 2022 (Assistant)</p>
+  <p>ICFP Artifact Evaluation Commitee 2020 </p>
 
 <h2>Teaching Activities</h2>
   <p>Course Instructor - Program Logics, Aarhus University, Fall 2021</p>
