--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@ h1 {text-align: center;}
 <p>02. October, 2019, Harvard University, Seminar [<a href="./talks/19-10-02_harvard.pdf">Slides</a>]</p>
 
 <h2>Conference Board and Commitee Participation</h2>
-  <p>OOPSLA Research Article Evaluation Committee 2022 (Assistant)</p>
-  <p>PLACES Research Article Evaluation Committee 2022</p>
-  <p>PLDI Artifact Evaluation Committee 2022</p>
-  <p>POPL Artifact Evaluation Commitee 2022</p>
-  <p>POPL Research Article Commitee 2022 (Assistant)</p>
-  <p>ICFP Artifact Evaluation Commitee 2020 </p>
+  <p>OOPSLA 2022 Research Article Evaluation Committee (Assistant)</p>
+  <p>PLACES 2022 Research Article Evaluation Committee</p>
+  <p>PLDI 2022 Artifact Evaluation Committee</p>
+  <p>POPL 2022 Artifact Evaluation Commitee</p>
+  <p>POPL 2022 Research Article Commitee (Assistant)</p>
+  <p>ICFP 2020 Artifact Evaluation Commitee </p>
 
 <h2>Teaching Activities</h2>
   <p>Course Instructor - Program Logics, Aarhus University, Fall 2021</p>
