Added POPL23 draft to homepage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <style>
 .content {
-  max-width: 760px;
+  max-width: 800px;
   margin: auto;
 }
 h1 {text-align: center;}
@@ -64,6 +64,8 @@ h1 {text-align: center;}
 <p>Machine-Checked Semantic Session Typing, CPP 2021 [Distinguished] <a href="./papers/semantic_session_typing_cpp.pdf">[pdf]</a></p>
 <p>Actris: Session-Type Based reasoning in Separation Logic, POPL 2020 <a href="./papers/actris_popl.pdf">[pdf]</a></p>
 
+<h2>Drafts</h2>
+<p>Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols, POPL 2023 <a href="./papers/reliable_communication_popl.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
 <p>02. May, 2022, Iris Workshop [<a href="./talks/22-02-05_iris_workshop.pdf">Slides</a>]</p>
