Removed OOPSLA mention from relcom manuscript

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ h1 {text-align: center;}
 <p>Machine-Checked Semantic Session Typing, CPP 2021 [Distinguished] <a href="./papers/semantic_session_typing_cpp.pdf">[pdf]</a></p>
 <p>Actris: Session-Type Based reasoning in Separation Logic, POPL 2020 <a href="./papers/actris_popl.pdf">[pdf]</a></p>
 
-<h2>Drafts</h2>
-<p>Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols, OOPSLA 2023 <a href="./papers/reliable_communication_oopsla23.pdf">[pdf]</a></p>
+<h2>Unpublished Manuscripts</h2>
+<p>Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols <a href="./papers/reliable_communication_manuscript.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
 <p>24. October, 2022, Aarhus University, Seminar [<a href="./talks/22-10-24_aarhus.pdf">Slides</a>]</p>
