Uploaded new image of myself

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h1 {text-align: center;}
 </p>
 
 <div>
-<img src="me.jpg" alt="me" style="width:250px;height:250px;" align="right" hspace="45" vspace="15">
+<img src="me.jpg" alt="me" style="width:250px;" align="right" hspace="45" vspace="0">
 <p>
   I am a postdoc at Aarhus University in Denmark.
   I come from an applied background, and so my interests for theoretical computer
