Added ESOP and SSSTV

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ h1 {text-align: center;}
 <p>02. October, 2019, Harvard University, Seminar [<a href="./talks/19-10-02_harvard.pdf">Slides</a>]</p>
 
 <h2>Conference Board and Commitee Participation</h2>
+  <p>ESOP 2023 Artifact Evaluation Committee</p>
   <p>OOPSLA 2022 Research Article Evaluation Committee (Assistant)</p>
   <p>PLACES 2022 Research Article Evaluation Committee</p>
   <p>PLDI 2022 Artifact Evaluation Committee</p>
@@ -93,6 +94,8 @@ h1 {text-align: center;}
   <p>ICFP 2020 Artifact Evaluation Commitee </p>
 
 <h2>Teaching Activities</h2>
+  <p>Co-Presenter - Summer School on Security Testing and Verification, KU Leuven, September 2022</p>
+  <p>Course Instructor - Program Logics, Aarhus University, Fall 2022</p>
   <p>Course Instructor - Program Logics, Aarhus University, Fall 2021</p>
   <p>Course Instructor - Advanced Programming, IT University of Copenhagen, Fall 2018</p>
   <p>Course Instructor - Programming Language Concepts and Implementation, IT University of Copenhagen, Spring 2018</p>
