Added the ICFP23 submissions

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ h1 {text-align: center;}
 <p>Actris: Session-Type Based reasoning in Separation Logic, POPL 2020 <a href="./papers/actris_popl.pdf">[pdf]</a></p>
 
 <h2>Unpublished Manuscripts</h2>
-<p>Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols <a href="./papers/reliable_communication_manuscript.pdf">[pdf]</a></p>
+<p>Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols <a href="./papers/reliable_communication_icfp23_manuscript.pdf">[pdf]</a></p>
+<p>Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl) <a href="./papers/miniactris_icfp23_manuscript.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
 <p>03. March, 2023, Aarhus University, Iris Seminar [<a href="./talks/23-03-03_iris_seminar.pdf">Slides</a>]</p>
