--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ h1 {text-align: center;}
 <p>Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl) <a href="./papers/miniactris_manuscript.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
+<p>23. May, 2023, Aarhus University, Iris Workshop [<a href="./talks/23-05-23_iris_workshop.pdf">Slides</a>]</p>
 <p>03. March, 2023, Aarhus University, Iris Seminar [<a href="./talks/23-03-03_iris_seminar.pdf">Slides</a>]</p>
 <p>24. October, 2022, Aarhus University, Seminar [<a href="./talks/22-10-24_aarhus.pdf">Slides</a>]</p>
 <p>21. September, 2022, KU Leuven, Summer School on Security and Verification [<a href="./talks/22-09-21_leuven_summer_school.pdf">Slides</a>]</p>
