Added ICFP 23 papers

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <style>
 .content {
-  max-width: 800px;
+  max-width: 840px;
   margin: auto;
 }
 h1 {text-align: center;}
@@ -60,13 +60,11 @@ h1 {text-align: center;}
 
 <h2>Publications</h2>
 
-<p>Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic, LMCS <a href="./papers/actris_lmcs.pdf">[pdf]</a></p>
-<p>Machine-Checked Semantic Session Typing, CPP 2021 [Distinguished] <a href="./papers/semantic_session_typing_cpp.pdf">[pdf]</a></p>
-<p>Actris: Session-Type Based reasoning in Separation Logic, POPL 2020 <a href="./papers/actris_popl.pdf">[pdf]</a></p>
-
-<h2>Unpublished Manuscripts</h2>
-<p>Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols <a href="./papers/reliable_communication_manuscript.pdf">[pdf]</a></p>
-<p>Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl) <a href="./papers/miniactris_manuscript.pdf">[pdf]</a></p>
+<p>ICFP 2023, Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols <a href="./papers/reliable_communication_icfp23.pdf">[pdf]</a></p>
+<p>ICFP 2023, Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl) <a href="./papers/miniactris_icfp23.pdf">[pdf]</a></p>
+<p>LMCS 2022, Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic <a href="./papers/actris_lmcs.pdf">[pdf]</a></p>
+<p>CPP 2021, Machine-Checked Semantic Session Typing [Distinguished] <a href="./papers/semantic_session_typing_cpp.pdf">[pdf]</a></p>
+<p>POPL 2020, Actris: Session-Type Based reasoning in Separation Logic <a href="./papers/actris_popl.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
 <p>23. May, 2023, Aarhus University, Iris Workshop [<a href="./talks/23-05-23_iris_workshop.pdf">Slides</a>]</p>
