Updated community service section

--- a/index.html
+++ b/index.html
@@ -86,12 +86,14 @@ h1 {text-align: center;}
 <p>02. October, 2019, Harvard University, Seminar [<a href="./talks/19-10-02_harvard.pdf">Slides</a>]</p>
 
 <h2>Conference Board and Commitee Participation</h2>
-  <p>ESOP 2023 Artifact Evaluation Committee</p>
+<h3>Research Article Evaluation</h3>
   <p>OOPSLA 2022 Research Article Evaluation Committee (Assistant)</p>
   <p>PLACES 2022 Research Article Evaluation Committee</p>
+  <p>POPL 2022 Research Article Evaluation Commitee (Assistant)</p>
+<h3>Artifact Evaluation</h3>
+  <p>ESOP 2023 Artifact Evaluation Committee</p>
   <p>PLDI 2022 Artifact Evaluation Committee</p>
   <p>POPL 2022 Artifact Evaluation Commitee</p>
-  <p>POPL 2022 Research Article Commitee (Assistant)</p>
   <p>ICFP 2020 Artifact Evaluation Commitee </p>
 
 <h2>Teaching Activities</h2>
