Added POPL 24 review

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ h1 {text-align: center;}
 
 <h2>Conference Board and Commitee Participation</h2>
 <h3>Research Article Evaluation</h3>
+  <p>POPL 2024 Research Article Evaluation Committee (External reviewer)</p>
   <p>OOPSLA 2022 Research Article Evaluation Committee (Assistant)</p>
   <p>PLACES 2022 Research Article Evaluation Committee</p>
   <p>POPL 2022 Research Article Evaluation Commitee (Assistant)</p>
@@ -105,7 +106,7 @@ h1 {text-align: center;}
   <p>Teaching Assistant - Intelligent Systems Programming, IT University of Copenhagen, Spring 2016</p>
   <p>Teaching Assistant - Operative Systems and C, IT University of Copenhagen, Fall 2015</p>
 
-<h2>Other Activities</h2>
+<h2>Industry Activities</h2>
   <p>Formal Methods Developer at Bedrock Systems, Inc., Fall 2019</p>
 
 <h2> Contact </h2>
