--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ h1 {text-align: center;}
 <h2>Conference Board and Commitee Participation</h2>
 <h3>Research Article Evaluation</h3>
   <p>POPL 2024 Research Article Evaluation Committee (External reviewer)</p>
-  <p>OOPSLA 2022 Research Article Evaluation Committee (Assistant)</p>
+  <p>OOPSLA 2022 Research Article Evaluation Committee (Assistant reviewer)</p>
   <p>PLACES 2022 Research Article Evaluation Committee</p>
-  <p>POPL 2022 Research Article Evaluation Commitee (Assistant)</p>
+  <p>POPL 2022 Research Article Evaluation Commitee (Assistant reviewer)</p>
 <h3>Artifact Evaluation</h3>
   <p>ESOP 2023 Artifact Evaluation Committee</p>
   <p>PLDI 2022 Artifact Evaluation Committee</p>
