--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ h1 {text-align: center;}
 <p>POPL 2020, Actris: Session-Type Based reasoning in Separation Logic <a href="./papers/actris_popl.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
+<p>07. September, 2023, ICFP Conference [<a href="./talks/23-09-07_icfp.pdf">Slides</a>]</p>
 <p>23. May, 2023, Aarhus University, Iris Workshop [<a href="./talks/23-05-23_iris_workshop.pdf">Slides</a>]</p>
 <p>03. March, 2023, Aarhus University, Iris Seminar [<a href="./talks/23-03-03_iris_seminar.pdf">Slides</a>]</p>
 <p>24. October, 2022, Aarhus University, Seminar [<a href="./talks/22-10-24_aarhus.pdf">Slides</a>]</p>
@@ -95,7 +96,7 @@ h1 {text-align: center;}
   <p>ESOP 2023 Artifact Evaluation Committee</p>
   <p>PLDI 2022 Artifact Evaluation Committee</p>
   <p>POPL 2022 Artifact Evaluation Commitee</p>
-  <p>ICFP 2020 Artifact Evaluation Commitee </p>
+  <p>ICFP 2020 Artifact Evaluation Commitee</p>
 
 <h2>Teaching Activities</h2>
   <p>Co-Presenter - Summer School on Security Testing and Verification, KU Leuven, September 2022</p>
