Added POPL 2024 preprints

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <style>
 .content {
-  max-width: 840px;
+  max-width: 880px;
   margin: auto;
 }
 h1 {text-align: center;}
@@ -60,6 +60,9 @@ h1 {text-align: center;}
 
 <h2>Publications</h2>
 
+<p>POPL 2024, Trillium: Higher-Order Concurrent and Distributed Separation Logic for Intensional Refinement (Preprint) <a href="./papers/2024_popl_trillium_preprint.pdf">[pdf]</a></p>
+<p>POPL 2024, Deadlock-Free Separation Logic: Linearity Yields Progress for
+Dependent Higher-Order Message Passing (Preprint) <a href="./papers/2024_popl_linear_actris_preprint.pdf">[pdf]</a></p>
 <p>ICFP 2023, Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols <a href="./papers/reliable_communication_icfp23.pdf">[pdf]</a></p>
 <p>ICFP 2023, Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl) <a href="./papers/miniactris_icfp23.pdf">[pdf]</a></p>
 <p>LMCS 2022, Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic <a href="./papers/actris_lmcs.pdf">[pdf]</a></p>
