Added recent reviewer duties

--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@ Dependent Higher-Order Message Passing (Preprint) <a href="./papers/2024_popl_li
 
 <h2>Conference Board and Commitee Participation</h2>
 <h3>Research Article Evaluation</h3>
+  <p>FoSSaCS 2024 Research Article Evaluation Committee (External reviewer)</p>
+  <p>CPP 2024 Research Article Evaluation Committee (External reviewer)</p>
   <p>POPL 2024 Research Article Evaluation Committee (External reviewer)</p>
-  <p>OOPSLA 2022 Research Article Evaluation Committee (Assistant reviewer)</p>
+  <p>OOPSLA 2022 Research Article Evaluation Committee (External reviewer)</p>
   <p>PLACES 2022 Research Article Evaluation Committee</p>
-  <p>POPL 2022 Research Article Evaluation Commitee (Assistant reviewer)</p>
+  <p>POPL 2022 Research Article Evaluation Commitee (External reviewer)</p>
 <h3>Artifact Evaluation</h3>
   <p>ESOP 2023 Artifact Evaluation Committee</p>
   <p>PLDI 2022 Artifact Evaluation Committee</p>
