--- a/index.html
+++ b/index.html
@@ -44,13 +44,20 @@ h1 {text-align: center;}
 <div>
 <img src="me.jpg" alt="me" style="width:250px;" align="right" hspace="45" vspace="0">
 <p>
-  I am a postdoc at Aarhus University in Denmark.
-  I come from an applied background, and so my interests for theoretical computer
-  science are rooted in bridging the gap between industry and academia.
-  My main contribution thus far, the Actris logical framework, is then,
-  in part, a venture about defining intuitive yet expressive specifications and
-  proofs for complicated message-passing programs, parsable by those who are
-  less theoretically interested.
+  I'm a reliable guy, currently acting at Aarhus University Denmark,
+  serving a postdoc protocol.
+  My interests revolve around certifying strong reliable guarantees about
+  unreliable software via machine-checked mathematical verification;
+  thus far primarily involving message passing communication and distributed
+  systems.
+  I come from an applied background, having a software development degree,
+  which skews my interests in the direction of the more pragmatically applicable.
+  I aim at bridging the gap between industry and academia, through research
+  outputs that are widely accessible.
+  My primary research contribution thus far---the Actris logical
+  framework---is then, in part, a venture about certifying strong reliability
+  for complicated message-passing systems, captured by specifications and proofs
+  that are parsable by those who are less theoretically interested.
 </p>
 </div>
 
