--- a/index.html
+++ b/index.html
@@ -67,48 +67,39 @@ h1 {text-align: center;}
 
 <h2>Publications</h2>
 
-<p>POPL 2024, Trillium: Higher-Order Concurrent and Distributed Separation Logic for Intensional Refinement (Preprint) <a href="./papers/2024_popl_trillium_preprint.pdf">[pdf]</a></p>
-<p>POPL 2024, Deadlock-Free Separation Logic: Linearity Yields Progress for
+<p>2024 POPL, Trillium: Higher-Order Concurrent and Distributed Separation Logic for Intensional Refinement (Preprint) <a href="./papers/2024_popl_trillium_preprint.pdf">[pdf]</a></p>
+<p>2024 POPL, Deadlock-Free Separation Logic: Linearity Yields Progress for
 Dependent Higher-Order Message Passing (Preprint) <a href="./papers/2024_popl_linear_actris_preprint.pdf">[pdf]</a></p>
-<p>ICFP 2023, Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols <a href="./papers/reliable_communication_icfp23.pdf">[pdf]</a></p>
-<p>ICFP 2023, Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl) <a href="./papers/miniactris_icfp23.pdf">[pdf]</a></p>
-<p>LMCS 2022, Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic <a href="./papers/actris_lmcs.pdf">[pdf]</a></p>
-<p>CPP 2021, Machine-Checked Semantic Session Typing [Distinguished] <a href="./papers/semantic_session_typing_cpp.pdf">[pdf]</a></p>
-<p>POPL 2020, Actris: Session-Type Based reasoning in Separation Logic <a href="./papers/actris_popl.pdf">[pdf]</a></p>
+<p>2023 ICFP, Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols <a href="./papers/reliable_communication_icfp23.pdf">[pdf]</a></p>
+<p>2023 ICFP, Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl) <a href="./papers/miniactris_icfp23.pdf">[pdf]</a></p>
+<p>2022 LMCS, Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic <a href="./papers/actris_lmcs.pdf">[pdf]</a></p>
+<p>2021 CPP, Machine-Checked Semantic Session Typing [Distinguished] <a href="./papers/semantic_session_typing_cpp.pdf">[pdf]</a></p>
+<p>2020 POPL, Actris: Session-Type Based reasoning in Separation Logic <a href="./papers/actris_popl.pdf">[pdf]</a></p>
 
 <h2>Talks</h2>
-<p>07. September, 2023, ICFP Conference [<a href="./talks/23-09-07_icfp.pdf">Slides</a>]</p>
-<p>23. May, 2023, Aarhus University, Iris Workshop [<a href="./talks/23-05-23_iris_workshop.pdf">Slides</a>]</p>
-<p>03. March, 2023, Aarhus University, Iris Seminar [<a href="./talks/23-03-03_iris_seminar.pdf">Slides</a>]</p>
-<p>24. October, 2022, Aarhus University, Seminar [<a href="./talks/22-10-24_aarhus.pdf">Slides</a>]</p>
-<p>21. September, 2022, KU Leuven, Summer School on Security and Verification [<a href="./talks/22-09-21_leuven_summer_school.pdf">Slides</a>]</p>
-<p>02. May, 2022, Iris Workshop [<a href="./talks/22-02-05_iris_workshop.pdf">Slides</a>]</p>
-<p>22. November, 2021, Aarhus University, Seminar [<a href="./talks/21-11-22_aarhus.pdf">Slides</a>]</p>
-<p>11. June, 2021, Ph.D. Defense [<a href="./talks/21-06-11_defense.pdf">Slides</a>]</p>
-<p>18. January, 2021, CPP Conference (long version) [<a href="./talks/21-01-18_cpp_long.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=z0ggx3SuGYc">Recording</a>]</p>
-<p>18. January, 2021, CPP Conference (short version) [<a href="./talks/21-01-18_cpp_short.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=bvm9v5Whv6c">Recording</a>]</p>
-<p>30. November, 2020, Aarhus University, Seminar [<a href="./talks/20-11-30_aarhus.pdf">Slides</a>]</p>
-<p>18. November, 2020, Radboud University, Seminar [<a href="./talks/20-11-18_radboud.pdf">Slides</a>]</p>
-<p>20. October, 2020, IT University of Copenhagen, Seminar [<a href="./talks/20-10-20_itu.pdf">Slides</a>]</p>
-<p>04. June, 2020, VEST workshop [<a href="./talks/20-06-04_vest.pdf">Slides</a>]</p>
-<p>27. May, 2020, Delft University of Technology, Seminar [<a href="./talks/20-05-27_delft.pdf">Slides</a>]</p>
-<p>22. January, 2020, POPL Conference [<a href="./talks/20-01-22_popl.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=BDnbxBmwNyQ">Recording</a>]</p>
-<p>28. October, 2019, Iris Workshop [<a href="./talks/19-10-28_iris_workshop.pdf">Slides</a>]</p>
-<p>02. October, 2019, Harvard University, Seminar [<a href="./talks/19-10-02_harvard.pdf">Slides</a>]</p>
+<p>2023, September 07, ICFP Conference [<a href="./talks/23-09-07_icfp.pdf">Slides</a>]</p>
+<p>2023, May 23, Aarhus University, Iris Workshop [<a href="./talks/23-05-23_iris_workshop.pdf">Slides</a>]</p>
+<p>2023, March 03, Aarhus University, Iris Seminar [<a href="./talks/23-03-03_iris_seminar.pdf">Slides</a>]</p>
+<p>2022, October 24, Aarhus University, Seminar [<a href="./talks/22-10-24_aarhus.pdf">Slides</a>]</p>
+<p>2022, September 21, KU Leuven, Summer School on Security and Verification [<a href="./talks/22-09-21_leuven_summer_school.pdf">Slides</a>]</p>
+<p>2022, May 02, Iris Workshop [<a href="./talks/22-02-05_iris_workshop.pdf">Slides</a>]</p>
+<p>2021, November 22, Aarhus University, Seminar [<a href="./talks/21-11-22_aarhus.pdf">Slides</a>]</p>
+<p>2021, June 11, Ph.D. Defense [<a href="./talks/21-06-11_defense.pdf">Slides</a>]</p>
+<p>2021, January 18, CPP Conference (short version) [<a href="./talks/21-01-18_cpp_short.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=bvm9v5Whv6c">Recording</a>] (long version) [<a href="./talks/21-01-18_cpp_long.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=z0ggx3SuGYc">Recording</a>]</p>
+<p>2020, November 30, Aarhus University, Seminar [<a href="./talks/20-11-30_aarhus.pdf">Slides</a>]</p>
+<p>2020, November 18, Radboud University, Seminar [<a href="./talks/20-11-18_radboud.pdf">Slides</a>]</p>
+<p>2020, October 20, IT University of Copenhagen, Seminar [<a href="./talks/20-10-20_itu.pdf">Slides</a>]</p>
+<p>2020, June 04, VEST workshop [<a href="./talks/20-06-04_vest.pdf">Slides</a>]</p>
+<p>2020, May 27, Delft University of Technology, Seminar [<a href="./talks/20-05-27_delft.pdf">Slides</a>]</p>
+<p>2020, January 22, POPL Conference [<a href="./talks/20-01-22_popl.pdf">Slides</a>] [<a href="https://www.youtube.com/watch?v=BDnbxBmwNyQ">Recording</a>]</p>
+<p>2019, October 28, Iris Workshop [<a href="./talks/19-10-28_iris_workshop.pdf">Slides</a>]</p>
+<p>2019, October 02, Harvard University, Seminar [<a href="./talks/19-10-02_harvard.pdf">Slides</a>]</p>
 
 <h2>Conference Board and Commitee Participation</h2>
-<h3>Research Article Evaluation</h3>
-  <p>FoSSaCS 2024 Research Article Evaluation Committee (External reviewer)</p>
-  <p>CPP 2024 Research Article Evaluation Committee (External reviewer)</p>
-  <p>POPL 2024 Research Article Evaluation Committee (External reviewer)</p>
-  <p>OOPSLA 2022 Research Article Evaluation Committee (External reviewer)</p>
-  <p>PLACES 2022 Research Article Evaluation Committee</p>
-  <p>POPL 2022 Research Article Evaluation Commitee (External reviewer)</p>
+<h3>Research Article Evaluation (* External)</h3>
+  <p>FoSSaCS'24* · CPP'24* · POPL'24* · OOPSLA'22* · PLACES'22 · POPL'22*</p>
 <h3>Artifact Evaluation</h3>
-  <p>ESOP 2023 Artifact Evaluation Committee</p>
-  <p>PLDI 2022 Artifact Evaluation Committee</p>
-  <p>POPL 2022 Artifact Evaluation Commitee</p>
-  <p>ICFP 2020 Artifact Evaluation Commitee</p>
+  <p>ESOP'23 · PLDI'22 · POPL'22 · ICFP'20</p>
 
 <h2>Teaching Activities</h2>
   <p>Co-Presenter - Summer School on Security Testing and Verification, KU Leuven, September 2022</p>
