Updated POPL24 papers to camera-ready version

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ h1 {text-align: center;}
 
 <h2>Publications</h2>
 
-<p>2024 POPL, Trillium: Higher-Order Concurrent and Distributed Separation Logic for Intensional Refinement (Preprint) <a href="./papers/2024_popl_trillium_preprint.pdf">[pdf]</a></p>
+<p>2024 POPL, Trillium: Higher-Order Concurrent and Distributed Separation Logic for Intensional Refinement <a href="./papers/2024_popl_trillium.pdf">[pdf]</a></p>
 <p>2024 POPL, Deadlock-Free Separation Logic: Linearity Yields Progress for
-Dependent Higher-Order Message Passing (Preprint) <a href="./papers/2024_popl_linear_actris_preprint.pdf">[pdf]</a></p>
+Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris.pdf">[pdf]</a></p>
 <p>2023 ICFP, Verifying Reliable Network Components in a Distributed Separation Logic with Dependent Separation Protocols <a href="./papers/reliable_communication_icfp23.pdf">[pdf]</a></p>
 <p>2023 ICFP, Dependent Session Protocols in Separation Logic from First Principles (Functional Pearl) <a href="./papers/miniactris_icfp23.pdf">[pdf]</a></p>
 <p>2022 LMCS, Actris 2.0: Asynchronous Session-Type Based reasoning in Separation Logic <a href="./papers/actris_lmcs.pdf">[pdf]</a></p>
