--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
   <p>ESOP'23 · PLDI'22 · POPL'22 · ICFP'20</p>
 
 <h2>Teaching Activities</h2>
-  <p>Co-Presenter - Summer School on Security Testing and Verification, KU Leuven, September 2022</p>
+  <p>Tutorial Responsible, Verified Message-Passing Concurrency in Iris: Separation Logic Meets Session Types, POPL′24 TutorialFest</p>
+  <p>Presenter - Summer School on Security Testing and Verification, KU Leuven, September 2022</p>
   <p>Course Instructor - Program Logics, Aarhus University, Fall 2022</p>
   <p>Course Instructor - Program Logics, Aarhus University, Fall 2021</p>
   <p>Course Instructor - Advanced Programming, IT University of Copenhagen, Fall 2018</p>
