Made e-mail less bottable

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Dependent Higher-Order Message Passing <a href="./papers/2024_popl_linear_actris
   <tbody>
     <tr>
       <td>E-mail:</td>
-      <td align="right"><a href="mailto:hinrichsen@cs.au.dk">hinrichsen@cs.au.dk</a></td>
+      <td align="right">hinrichsen  at  cs.au.dk</td>
     </tr>
     <tr>
       <td>Phone:</td>
